[package]
name = "excel_read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.12.0"
# strs_tools = "0.1.8"
# easy_strings = "0.2.0"
calamine = "0.18.0"
csv = "1.1.6"
rusqlite = {version = "0.28.0", features = ["bundled"]}